UI bugfix + demo book addition -Fix book operation buttons from overlapping new/add modal window -Added demo book data to test functionality for new user (if visible)

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h1 {
   filter: invert(20%);
   transition: transform 0.1s ease-in-out;
   padding: 5px;
-  z-index: 9;
+  z-index: 8;
   cursor: pointer;
 }
 
@@ -134,7 +134,7 @@ h1 {
   font-size: 30px;
   font-family: "Times New Roman";
   padding: 5px;
-  z-index: 9;
+  z-index: 8;
 }
 
 #close-modal {
@@ -202,7 +202,7 @@ input:checked {
 
 input:checked:before {
   transition: all 0.7s;
-  transform: translate(100%);
+  transform: translate(100%) translateY(-1px) translateX(-1px);
 }
 
 #nb-read {
